# airo-planner

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  benchmark_results.csv  environment.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: mypy.yaml  pre-commit.yaml  publish-to-pypi.yaml  pytest.yaml
airo_planner/: __init__.py  exceptions.py  function_conversions.py  interfaces.py  joint_bounds.py  multiple_goal_planner.py  path_conversions.py
airo_planner/curobo/: rerun_visualizer.py  robot.py  single_arm_curobo_planner.py
airo_planner/ompl/: dual_arm_ompl_planner.py  mobile_platform_ompl_planner.py  single_arm_ompl_planner.py  state_space.py  utilities.py
airo_planner/selection/: goal_selection.py  path_selection.py
notebooks/: 01_planning_to_joint_configurations.ipynb  02_planning_to_tcp_poses.ipynb  03_dual_arm_planning.ipynb  04_mobile_platform_planning.ipynb  05_constrained_planning.ipynb  06_curobo.ipynb  07_curobo_custom_robot.ipynb
notebooks/.ipynb_checkpoints/: 02_planning_to_tcp_poses-checkpoint.ipynb  04_mobile_platform_planning-checkpoint.ipynb
scripts/: benchmark_ompl_vs_curobo.py
test/: test_ompl_single_arm.py  test_path_conversions.py
test/curobo/single_arm/: test_curobo_basic_planning.py
test/ompl/single_arm/: test_basic_planning.py  test_exceptions.py
