[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airo-planner"
version = "0.0.6"
authors = [
  { name = "Andreas Verleysen", email = "andreas.verleysen@ugent.be" },
  { name = "Victor-Louis De Gusseme", email = "victorlouisdg@gmail.com" },
  { name = "Mathieu De Coster", email = "mathieu.decoster@ugent.be" }
]
description = "Motion planning for single and dual robot arms."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "airo-drake>=0.0.8",
    "airo-typing>=2025.11.0",
    "loguru>=0.7.3",
    "ompl>=1.7.0",
    "yourdfpy>=0.0.58",
]

[project.urls]
Homepage = "https://github.com/airo-ugent/airo-planner"
Issues = "https://github.com/airo-ugent/airo-planner/issues"

[project.optional-dependencies]
rerun = [
    "rerun-sdk>=0.27.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "setuptools>=80.9.0",
]
